<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shara.gamesdb.GameDetailsActivity"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gameTitle"
        android:textAlignment="viewStart" />

    <TextView
        android:text="@string/gameOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/gameOverview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/gameOverview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:layout_height="150sp"
        android:id="@+id/scrollview2"
        android:background="@drawable/scrollviewborder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/gameDesciptionLinearLayout" />
    </ScrollView>

    <TextView
        android:text="@string/gamePublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gamePublisher"
        android:layout_below="@+id/gameGenre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp" />

    <Button
        android:layout_width="200sp"
        android:id="@+id/finishButton"
        android:layout_height="30sp"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/similarGames"
        android:layout_marginTop="11dp"
        android:padding="5sp"
        android:text="@string/finishButton"
        android:layout_alignRight="@+id/similarGames"
        android:layout_alignEnd="@+id/similarGames"
        android:layout_alignLeft="@+id/similarGames"
        android:layout_alignStart="@+id/similarGames" />

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/gameImage"
        android:layout_height="100sp"
        android:layout_below="@+id/gameTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/gameGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameGenre"
        android:layout_below="@+id/scrollview2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200sp"
        android:id="@+id/similarGames"
        android:layout_height="30sp"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        android:padding="5sp"
        android:text="@string/similarGames"
        android:layout_below="@+id/playTrailer"
        android:layout_alignLeft="@+id/playTrailer"
        android:layout_alignStart="@+id/playTrailer"
        android:layout_marginTop="11dp" />

    <Button
        android:text="@string/playTrailer"
        android:layout_width="200sp"
        android:id="@+id/playTrailer"
        android:layout_height="30sp"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        android:padding="5sp"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:foregroundGravity="center"
        android:layout_below="@+id/gamePublisher"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
